# baldr

./: .gitignore  README.md  environment.yml  pyproject.toml
baldr/: cli.py
helper_scripts/: barcode_wide_to_long.py  make_consensus.sh
